<resources>
    <string name="app_name">OPAL</string>
    <string name="strong_pass_head">Strong Password Requirements:</string>
    <string name="strong_pass_indicator">Strong Password Indicator</string>
    <string name="strong_pass_eight_chars">At least eight (8) characters</string>
    <string name="strong_pass_lowercase">At least one (1) lowercase letter</string>
    <string name="strong_pass_uppercase">At least one (1) uppercase letter</string>
    <string name="strong_pass_digits">At least one (1) digit</string>
    <string name="strong_pass_special_chars">At least one (1) special character</string>
    <string name="err_storage_permission_denied">
        Storage permission denied. You can also allow it from your device\'s settings.
    </string>
    <string name="err_fine_location_permission_denied">
        Device location permission denied. You can also allow it from your device\'s
        settings.
    </string>
    <string name="err_image_selection_failed">
        There was an error selecting the image file.
    </string>
    <string name="err_get_location_failed">
        There was an error getting the device\'s location. Error cause: %s
    </string>
    <string name="err_no_device_location_result">
        Error while retrieving device location. Please try again later.
    </string>
    <string name="err_blank_first_name">Please enter your first name.</string>
    <string name="err_blank_last_name">Please enter your last name.</string>
    <string name="err_first_name_length">First name should be 2 to 30 characters long.</string>
    <string name="err_last_name_length">Last name should be 2 to 30 characters long.</string>
    <string name="err_blank_email">Please enter your email address.</string>
    <string name="err_wrong_email_format">Please enter a valid email address.</string>
    <string name="err_blank_username">Please enter your username.</string>
    <string name="err_admin_username">\"admin\" is not allowed for username.</string>
    <string name="err_username_length">Username should be 6 to 20 characters long.</string>
    <string name="err_invalid_username">Please enter a valid username.</string>
    <string name="err_blank_password">Please enter your password.</string>
    <string name="err_password_not_strong">
        Please complete the requirements for strong password.
    </string>
    <string name="err_blank_confirm_password">Please enter confirm password.</string>
    <string name="err_passwords_not_match">Passwords do not match.</string>
    <string name="err_unchecked_tac">Please agree to our Terms and Conditions.</string>
    <string name="err_no_profile_pic_to_remove">
        No profile picture found. Tap the profile picture to select one.
    </string>
    <string name="err_blank_phone">Please enter your phone number.</string>
    <string name="err_wrong_phone_format">Please enter a valid phone number.</string>
    <string name="err_no_gender_selected">Please select your gender.</string>
    <string name="err_register_login_failed">
        Your account is successfully registered. However, there was a problem
        logging in to your account.
    </string>
    <string name="err_blank_current_password">Please enter your current password.</string>
    <string name="err_blank_new_password">Please enter your new password.</string>
    <string name="err_blank_full_name">Please enter your full name.</string>
    <string name="err_full_name_length">Full name should be 3 to 60 characters long.</string>
    <string name="err_blank_province">Please select your province.</string>
    <string name="err_blank_city">Please select your city/municipality.</string>
    <string name="err_blank_brgy">Please select your barangay.</string>
    <string name="err_blank_postal">Please enter your postal code.</string>
    <string name="err_postal_format">Postal code should only contain numbers.</string>
    <string name="err_postal_length">Postal code should have exactly 4 digits.</string>
    <string name="err_blank_detailed">Please enter your detailed address.</string>
    <string name="err_detailed_length">
        Detailed address should be 10 to 100 characters long.
    </string>
    <string name="err_unselect_default_address">
        Cannot unselect default address. Set another address as default instead.
    </string>
    <string name="err_delete_default_address">Default address cannot be deleted.</string>
    <string name="err_address_limit">
        You cannot have more than five (5) addresses. Delete some of your addresses
        and try again.
    </string>
    <string name="err_no_current_location">
        Please set your current location first before browsing for wet markets.
    </string>
    <string name="err_blank_market_name">Please enter the market name.</string>
    <string name="err_market_name_length">
        Market name should be 5 to 50 characters long.
    </string>
    <string name="err_blank_wet_market">
        Please enter the name of parent wet market.
    </string>
    <string name="err_wet_market_length">
        Parent wet market name should be 5 to 50 characters long.
    </string>
    <string name="err_no_mkt_category_selected">
        Please select the market\'s category.
    </string>
    <string name="err_blank_custom_category">Please specify the custom category.</string>
    <string name="err_custom_category_length">
        Custom category should be 4 to 20 characters long.
    </string>
    <string name="err_no_market_pic_to_remove">
        No market profile picture found. Tap the market profile picture panel
        to select one.
    </string>
    <string name="err_blank_mkt_province">Please select the market\'s province.</string>
    <string name="err_blank_mkt_city">Please select the market\'s city/municipality.</string>
    <string name="err_blank_mkt_brgy">Please select the market\'s barangay.</string>
    <string name="err_blank_mkt_postal">Please enter the market\'s postal code.</string>
    <string name="err_blank_mkt_detailed">Please enter the market\'s detailed address.</string>
    <string name="err_unchecked_vendor_tac">Please agree to the Vendor\'s T&amp;C.</string>
    <string name="err_no_product_image_selected">Please select the product image.</string>
    <string name="err_no_product_pic_to_remove">
        No product image found. Tap the add product image to select one.
    </string>
    <string name="err_blank_product_name">Please enter the product name.</string>
    <string name="err_product_name_length">
        Product name should be 4 to 50 characters long.
    </string>
    <string name="err_blank_product_desc">Please enter the product description.</string>
    <string name="err_product_desc_length">
        Product description should be 10 to 400 characters long.
    </string>
    <string name="err_blank_product_price">Please enter the product price.</string>
    <string name="err_product_price_format">Product price must be a decimal number.</string>
    <string name="err_zero_or_negative_price">Product price must be greater than 0.</string>
    <string name="err_no_unit_selected">Please select the product\'s measurement unit.</string>
    <string name="err_blank_custom_unit">Please specify the custom unit.</string>
    <string name="err_custom_unit_length">Custom unit should be 2 to 15 characters long.</string>
    <string name="err_blank_product_weight">Please enter the product weight.</string>
    <string name="err_product_weight_format">Product weight must be a decimal number.</string>
    <string name="err_zero_or_negative_weight">Product weight must be greater than 0.</string>
    <string name="err_blank_product_stock">Please enter the product stock.</string>
    <string name="err_product_stock_format">Product stock must be a whole number.</string>
    <string name="err_negative_stock">Product stock must not be a negative number.</string>
    <string name="err_cart_weight_limit">
        Your cart exceeds the weight limit of 25 kg. Please remove some of
        your items in the cart.
    </string>
    <string name="err_no_selected_address">
        You haven\'t set one of your addresses as default delivery address.
        Please select one from your address list.
    </string>
    <string name="err_address_not_in_coverage">
        Your selected address is not within the market\'s delivery coverage.
    </string>
    <string name="err_route_not_in_coverage">
        Cannot view route. Selected address is not within the market\'s
        delivery coverage.
    </string>
    <string name="err_failed_get_direction">
        There was an error getting the travel duration and distance between
        the market and customer\'s address.
    </string>
    <string name="err_failed_draw_route">
        There was an error drawing the route between market and customer\'s address.
    </string>
    <string name="unk_err_name">Invalid name (EditText ID unknown).</string>
    <string name="unk_err_long_text">
        Invalid long text (EditText ID unknown).
    </string>
    <string name="unk_err_email">Invalid email address (EditText ID unknown).</string>
    <string name="unk_err_phone">Invalid phone number (EditText ID unknown).</string>
    <string name="unk_err_username">Invalid username (EditText ID unknown).</string>
    <string name="unk_err_password">Invalid password (EditText ID unknown).</string>
    <string name="unk_err_postal">Invalid postal code (EditText ID unknown).</string>
    <string name="unk_err_specific_other">
        Invalid specific other answer (EditText ID unknown).
    </string>
    <string name="unk_err_checkbox">
        Please check all of the required checkboxes (CheckBox ID unknown).
    </string>
    <string name="messages">Messages</string>
    <string name="nav_addresses">Addresses</string>
    <string name="nav_order_history">Order History</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_log_out">Log Out</string>
    <string name="nav_subhead_help">Help</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="nav_become_vendor">Become a Vendor</string>
    <string name="nav_subhead_vendor_center">Vendor Center</string>
    <string name="nav_my_market">My Market</string>
    <string name="nav_products">Products</string>
    <string name="nav_sales_history">Sales History</string>
    <string name="nav_insights">Insights</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="notif_head">Notification Head</string>
    <string name="notif_desc">Notification description here&#8230;</string>
    <string name="notif_time">09:11 AM</string>
    <string name="notif_profile_cd">Notification Profile</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">₱%1$.2f / %2$s</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="location_settings">Location Settings</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="product_image">Product Image</string>
    <string name="product_weight">%.2f kg</string>
    <string name="cart_qty_minus">-</string>
    <string name="cart_qty_counter">0</string>
    <string name="cart_qty_plus">+</string>
    <string name="item_price">₱%.2f</string>
    <string name="market_customer_icon">Market/Customer Icon</string>
    <string name="market_customer_name">Market/Customer Name</string>
    <string name="order_id">Order ID</string>
    <string name="order_date">Order Date</string>
    <string name="order_items">Order Items</string>
    <string name="order_item_qty_default">Total (n items):</string>
    <string name="order_status_icon">Order Status Icon</string>
    <string name="order_status">Status</string>
</resources>