<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:color="@color/app_white"
    tools:showIn="navigation_view">

    <!-- Addresses Menu Item -->
    <item
        android:id="@+id/nav_addresses"
        android:icon="@drawable/ic_addresses"
        android:title="@string/nav_addresses" />

    <!-- Order History Menu Item -->
    <item
        android:id="@+id/nav_order_history"
        android:icon="@drawable/ic_order_history"
        android:title="@string/nav_order_history" />

    <!-- Settings Menu Item -->
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />

    <!-- Sign Out Menu Item -->
    <item
        android:id="@+id/nav_log_out"
        android:icon="@drawable/ic_log_out"
        android:title="@string/nav_log_out" />

    <!-- For Vendors Only -->
    <item
        android:id="@+id/nav_vendor_only"
        android:title="@string/nav_subhead_vendor_center">

        <menu>
            <!-- Your Market Submenu Item -->
            <item
                android:id="@+id/nav_my_market"
                android:icon="@drawable/ic_market"
                android:title="@string/nav_my_market" />

            <!-- Products Submenu Item -->
            <item
                android:id="@+id/nav_products"
                android:icon="@drawable/ic_products"
                android:title="@string/nav_products" />

            <!-- Sales History Submenu Item -->
            <item
                android:id="@+id/nav_sales_history"
                android:icon="@drawable/ic_sales_history"
                android:title="@string/nav_sales_history" />

            <!-- Insights Submenu Item -->
            <item
                android:id="@+id/nav_insights"
                android:icon="@drawable/ic_insights"
                android:title="@string/nav_insights" />

        </menu>

    </item>

    <!-- Contact Us Menu Item Group -->
    <item android:title="@string/nav_subhead_help">

        <menu>
            <!-- About Us Submenu Item -->
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_about_us"
                android:title="@string/nav_about_us" />

            <!-- Feedback Submenu Item -->
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/nav_feedback" />

            <!-- Privacy Policy Submenu Item -->
            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/ic_privacy"
                android:title="@string/nav_privacy_policy" />

            <!-- Become a Vendor Submenu Item (Customers Only) -->
            <item
                android:id="@+id/nav_become_vendor"
                android:icon="@drawable/ic_become_vendor"
                android:title="@string/nav_become_vendor" />
        </menu>

    </item>

</menu>