<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_navigation"
    app:startDestination="@id/fragment_home">

    <!-- Home Fragment -->
    <fragment
        android:id="@+id/fragment_home"
        android:name="edu.cccdci.opal.ui.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">

        <!-- Home to Messages -->
        <action
            android:id="@+id/home_to_messages"
            app:destination="@id/fragment_messages" />

        <!-- Home to Order History -->
        <action
            android:id="@+id/home_to_order_history"
            app:destination="@+id/fragment_order_history" />

        <!-- Home to Settings -->
        <action
            android:id="@+id/home_to_settings"
            app:destination="@id/fragment_settings" />

        <!-- Home to About Us -->
        <action
            android:id="@+id/home_to_about"
            app:destination="@id/fragment_about" />

        <!-- Home to Feedback -->
        <action
            android:id="@+id/home_to_feedback"
            app:destination="@id/fragment_feedback" />

        <!-- Home to Privacy Policy -->
        <action
            android:id="@+id/home_to_privacy"
            app:destination="@id/fragment_privacy" />

        <!-- Home to Your Market -->
        <action
            android:id="@+id/home_to_your_market"
            app:destination="@id/fragment_your_market" />

        <!-- Home to Customer Transactions -->
        <action
            android:id="@+id/home_to_cust_trans"
            app:destination="@id/fragment_cust_trans" />

        <!-- Home to Insights -->
        <action
            android:id="@+id/home_to_insights"
            app:destination="@id/fragment_insights" />

    </fragment>

    <!-- Markets Fragment -->
    <fragment
        android:id="@+id/fragment_markets"
        android:name="edu.cccdci.opal.ui.fragments.MarketsFragment"
        android:label="@string/markets"
        tools:layout="@layout/fragment_markets" />

    <!-- Categories Fragment -->
    <fragment
        android:id="@+id/fragment_categories"
        android:name="edu.cccdci.opal.ui.fragments.CategoriesFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_categories" />

    <!-- Notifications Fragment -->
    <fragment
        android:id="@+id/fragment_notifs"
        android:name="edu.cccdci.opal.ui.fragments.NotificationsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notifications" />

    <!-- Messages Fragment -->
    <fragment
        android:id="@+id/fragment_messages"
        android:name="edu.cccdci.opal.ui.fragments.MessagesFragment"
        android:label="@string/messages"
        tools:layout="@layout/fragment_messages" />

    <!-- Order History Fragment -->
    <fragment
        android:id="@+id/fragment_order_history"
        android:name="edu.cccdci.opal.ui.fragments.OrderHistoryFragment"
        android:label="@string/nav_order_history"
        tools:layout="@layout/fragment_order_history" />

    <!-- Settings Fragment -->
    <fragment
        android:id="@+id/fragment_settings"
        android:name="edu.cccdci.opal.ui.fragments.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings">

        <!-- Settings to Notification Settings -->
        <action
            android:id="@+id/settings_to_notif_settings"
            app:destination="@id/fragment_notif_settings" />

        <!-- Settings to Location Settings -->
        <action
            android:id="@+id/settings_to_loc_settings"
            app:destination="@id/fragment_loc_settings" />

        <!-- Settings to Change Password -->
        <action
            android:id="@+id/settings_to_change_pass"
            app:destination="@id/fragment_change_pass" />

        <!-- Settings to Delete Account -->
        <action
            android:id="@+id/settings_to_del_account"
            app:destination="@id/fragment_del_acc" />

    </fragment>

    <!-- Notification Settings Fragment (sub-fragment of Settings) -->
    <fragment
        android:id="@+id/fragment_notif_settings"
        android:name="edu.cccdci.opal.ui.fragments.NotifSettingsFragment"
        android:label="@string/notification_settings"
        tools:layout="@layout/fragment_notif_settings" />

    <!-- Location Settings Fragment (sub-fragment of Settings) -->
    <fragment
        android:id="@+id/fragment_loc_settings"
        android:name="edu.cccdci.opal.ui.fragments.LocationSettingsFragment"
        android:label="@string/location_settings"
        tools:layout="@layout/fragment_location_settings" />

    <!-- Change Password Fragment (sub-fragment of Settings) -->
    <fragment
        android:id="@+id/fragment_change_pass"
        android:name="edu.cccdci.opal.ui.fragments.ChangePasswordFragment"
        android:label="@string/change_password"
        tools:layout="@layout/fragment_change_password" />

    <!-- Delete Account Fragment (sub-fragment of Settings) -->
    <fragment
        android:id="@+id/fragment_del_acc"
        android:name="edu.cccdci.opal.ui.fragments.DeleteAccountFragment"
        android:label="@string/delete_account"
        tools:layout="@layout/fragment_delete_account" />

    <!-- About Us Fragment -->
    <fragment
        android:id="@+id/fragment_about"
        android:name="edu.cccdci.opal.ui.fragments.AboutUsFragment"
        android:label="@string/nav_about_us"
        tools:layout="@layout/fragment_about_us" />

    <!-- Feedback Fragment -->
    <fragment
        android:id="@+id/fragment_feedback"
        android:name="edu.cccdci.opal.ui.fragments.FeedbackFragment"
        android:label="@string/nav_feedback"
        tools:layout="@layout/fragment_feedback" />

    <!-- Privacy Policy Fragment -->
    <fragment
        android:id="@+id/fragment_privacy"
        android:name="edu.cccdci.opal.ui.fragments.PrivacyPolicyFragment"
        android:label="@string/nav_privacy_policy"
        tools:layout="@layout/fragment_privacy_policy" />

    <!-- Fragments for Vendors Only -->
    <!-- Your Market Fragment -->
    <fragment
        android:id="@+id/fragment_your_market"
        android:name="edu.cccdci.opal.ui.fragments.YourMarketFragment"
        android:label="@string/nav_your_market"
        tools:layout="@layout/fragment_your_market" />

    <!-- Customer Transactions Fragment -->
    <fragment
        android:id="@+id/fragment_cust_trans"
        android:name="edu.cccdci.opal.ui.fragments.CustomerTransactionFragment"
        android:label="@string/nav_customer_transactions"
        tools:layout="@layout/fragment_customer_transaction" />

    <!-- Insights Fragment -->
    <fragment
        android:id="@+id/fragment_insights"
        android:name="edu.cccdci.opal.ui.fragments.InsightsFragment"
        android:label="@string/nav_insights"
        tools:layout="@layout/fragment_insights" />

</navigation>