<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_order"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/medium_mrg_pd"
    android:clipToPadding="false"
    app:cardCornerRadius="@dimen/checkout_panel_corners"
    app:cardElevation="@dimen/checkout_panel_elevation">

    <LinearLayout
        android:id="@+id/ll_order_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/medium_mrg_pd">

            <ImageView
                android:id="@+id/iv_order_icon"
                android:layout_width="@dimen/medium_icon_size"
                android:layout_height="@dimen/medium_icon_size"
                android:contentDescription="@string/market_customer_icon"
                android:src="@drawable/ic_market" />

            <edu.cccdci.opal.utils.HeaderTextView
                android:id="@+id/tv_order_title_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_mrg_pd"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/market_customer_name"
                android:textColor="@color/app_black"
                android:textSize="@dimen/main_text_size" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/border_line_width"
            android:background="@color/mid_light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/medium_large_mrg_pd"
            android:paddingTop="@dimen/medium_mrg_pd"
            android:paddingEnd="@dimen/medium_large_mrg_pd"
            android:paddingBottom="@dimen/medium_mrg_pd">

            <edu.cccdci.opal.utils.HeaderTextView
                android:id="@+id/tv_order_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_id"
                android:textColor="@color/app_black"
                android:textSize="@dimen/main_text_size" />

            <edu.cccdci.opal.utils.MainTextView
                android:id="@+id/tv_order_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_mrg_pd"
                android:text="@string/order_date"
                android:textColor="@color/app_black"
                android:textSize="@dimen/main_text_size" />

            <edu.cccdci.opal.utils.MainTextView
                android:id="@+id/tv_order_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_mrg_pd"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/order_items"
                android:textColor="@color/app_black"
                android:textSize="@dimen/main_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_mrg_pd"
                android:gravity="center_vertical|end"
                android:orientation="horizontal">

                <edu.cccdci.opal.utils.MainTextView
                    android:id="@+id/tv_order_items_qty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/small_mrg_pd"
                    android:text="@string/order_item_qty_default"
                    android:textColor="@color/app_black"
                    android:textSize="@dimen/main_text_size" />

                <edu.cccdci.opal.utils.HeaderTextView
                    android:id="@+id/tv_order_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_price"
                    android:textColor="@color/app_black"
                    android:textSize="@dimen/main_text_size" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/border_line_width"
            android:background="@color/mid_light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/medium_large_mrg_pd"
            android:paddingTop="@dimen/medium_mrg_pd"
            android:paddingEnd="@dimen/medium_large_mrg_pd"
            android:paddingBottom="@dimen/medium_mrg_pd">

            <ImageView
                android:id="@+id/iv_order_status_icon"
                android:layout_width="@dimen/small_icon_size"
                android:layout_height="@dimen/small_icon_size"
                android:contentDescription="@string/order_status_icon"
                android:src="@drawable/ic_status_info" />

            <edu.cccdci.opal.utils.MainTextView
                android:id="@+id/tv_order_status_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_mrg_pd"
                android:text="@string/order_status"
                android:textSize="@dimen/main_text_size" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>